# VulGPT

./: .env.template  .gitignore  README.md  docker-compose.yml
data/: framework_comparison_results.json
docs/: framework_comparison_analysis.md  framework_comparison_summary.md
src/backend/adk_scorer/: agent.py  main.py
src/backend/adk_scorer/tests/: test_main.py
src/backend/api/: README.md  main.py  pyproject.toml  requirements.txt
src/backend/api/llm/: __init__.py  vulnerability_scanner.py
src/backend/api/osv/: neo4j_connection.py  osv_vuln_neo4j_loader.py  test_hitting_set.py  vulnerability_repo_mapper.py
src/backend/api/routers/: llm_scanner.py
src/backend/semantic_kernel_scorer/: README.md  __init__.py  agent.py  benchmark_data.py  main.py  run_benchmark.py  test_scorer.py
src/backend/tasks/: checkout_repos.py  filter_minimal_sets.py  run_vulnerability_scanner.py  scoring.py
