[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.10",
    "neo4j>=5.28.1",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "python-dotenv>=0.13",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    "httpx>=0.27.0",
    "packageurl-python>=0.11",
    "PyYAML>=6.0",
    "google-adk>=1.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
